--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -106,7 +106,7 @@
     <div id="responsive-nav">
       <!-- NAV -->
       <ul class="main-nav nav py-3">
-        <li class="active"><a routerLink="/home">Home</a></li>
+        <li class="active"><a routerLink="/">Home</a></li>
         <li><a routerLink="/contact">Contact Us</a></li>
       </ul>
       <!-- /NAV -->
